--- a/pom.xml
+++ b/pom.xml
@@ -11,7 +11,7 @@
 
     <modelVersion>4.0.0</modelVersion>
     <artifactId>bytes-validator</artifactId>
-    <version>1.0.0-SNAPSHOT</version>
+    <version>1.0.0-Final</version>
 
     <dependencies>
 
